--- a/src/components/TShirt/TShirt.css
+++ b/src/components/TShirt/TShirt.css
@@ -16,3 +16,8 @@
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
 }
+
+.tshirt-details {
+    text-align: center;
+    margin-bottom: 15px;
+}
