header menu style modified

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,16 @@
 .links {
-    padding: 10px;
+    padding: 20px 0px;
     background-color: blueviolet;
 }
 
 .links a {
     color: white;
-    padding: 10px;
+    padding: 20px;
     font-weight: 700;
     text-decoration: none;
-    margin-right: 20px;
 }
 
 .links a:hover {
     background-color:blue;
-    padding: 10px;
+    padding: 20px;
 }
