--- a/src/components/TShirt/TShirt.css
+++ b/src/components/TShirt/TShirt.css
@@ -8,7 +8,7 @@
 }
 
 .tshirt-image img {
-    height: 250px;
+    height: 350px;
     width: 100%;
     border-radius: 15px;
     -webkit-border-radius: 15px;
@@ -20,4 +20,8 @@
 .tshirt-details {
     text-align: center;
     margin-bottom: 15px;
+}
+
+.tshirt-btn {
+    padding: 10px 20px;
 }
