--- a/src/components/TShirt/TShirt.css
+++ b/src/components/TShirt/TShirt.css
@@ -7,14 +7,20 @@
     -o-border-radius: 15px;
 }
 
+.tshirt-image {
+    margin: 7.5px;
+    padding: 7.5px;
+}
+
 .tshirt-image img {
     height: 350px;
     width: 100%;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    border: 2px solid lightgray;
+    border-radius: 7.5px;
+    -webkit-border-radius: 7.5px;
+    -moz-border-radius: 7.5px;
+    -ms-border-radius: 7.5px;
+    -o-border-radius: 7.5px;
 }
 
 .tshirt-details {
