--- a/src/components/TShirt/TShirt.css
+++ b/src/components/TShirt/TShirt.css
@@ -1,5 +1,5 @@
 .tshirt-card {
-    border: 2px solid lightgray;
+    border: 2px solid blueviolet;
     border-radius: 15px;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
