--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -11,13 +11,33 @@
     -o-border-radius: 10px;
 }
 
+.cart-item img {
+    width: 40px;
+    height: 50px;
+    margin-right: 15px;
+    border: 2px solid lightgray;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
 .cart-item p {
     flex-grow: 1;
-    font-weight: 700;
+    font-size: 17px;
+    font-weight: 500;
 }
 
 .cart-item button {
     font-weight: 700;
-    font-size: 18px;
-    color: red;
+    font-size: 20px;
+    color: crimson;
+    background: lightpink;
+    padding: 5px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
 }
